Fixed overflow style issue.

--- a/studentsSystem/web/styles/css/style.css
+++ b/studentsSystem/web/styles/css/style.css
@@ -74,6 +74,10 @@ table{
     min-width: 20%;
 }
 
+#userTable {
+    overflow: auto;
+}
+
 #addNewCourse, #addNewSpeciality, #addNewSubject, #addNewStudent, #addNewAssessment{
     margin-left: 35%;
 }
